# game

./: .gitignore  CMakeLists.txt
res/shaders/: fSprite.txt  fragment.txt  vSprite.txt  vertex.txt
src/: main.cpp
src/renderer/: animeteSprite.cpp  animeteSprite.h  shaderProgram.cpp  shaderProgram.h  sprite.cpp  sprite.h  texture2D.cpp  texture2D.h
src/resources/: resourceManager.cpp  resourceManager.h
